--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,8 @@
   "description": "Webpack + Babel + React",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode=production",
-    "dev": "webpack-dev-server"
+    "build": "webpack --mode production",
+    "dev": "webpack-dev-server --open --hot --mode development"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^5.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-scripts": "^4.0.3",
     "webpack": "^5.59.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
